trying to fix image not showing up issue
trying to fix image not showing up issue

--- a/docs/CSS/parts.css
+++ b/docs/CSS/parts.css
@@ -94,7 +94,7 @@ uses css flex to center its self*/
 }
 .img_2{
     height: 100%;
-    background-image: url("../../docs/to be drawn.jpg") !important;
+    background-image: url("../to\ be\ drawn.jpg") !important;
     /* background-color: rgb(255, 0, 21); */
 }
 
@@ -200,7 +200,7 @@ uses css flex to center its self*/
     /* background-color: aqua; */
 }
 .grd_img_2{
-    background-image: url('../to be drawn.jpg') !important; 
+    background-image: url('../to\ be\ drawn.jpg') !important; 
 }
 /* grid area 3 */
 .grd_3 { 
